--- a/train2_corr.ipynb
+++ b/train2_corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "03eda879-97a6-45f0-bda8-5c570c17aed8",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import json\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import random"
+    "import random\n",
+    "import pysplitter as pysp"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "427a9386-3cfd-48cb-9d7c-e499e66dde5b",
    "metadata": {
     "scrolled": true
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "00912489-9d5c-4512-a5f9-2d6820a18157",
    "metadata": {},
    "outputs": [],
@@ -58,21 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6506629b-933d-4466-9659-3d31034328bd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7613"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -85,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "58ef4a0b-438c-4662-b63f-0e6d41e63d36",
    "metadata": {
     "scrolled": true
@@ -97,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "7d2a6b53-adf8-431c-8615-fa3797d5209c",
    "metadata": {},
    "outputs": [],
@@ -123,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "54091c40-c8c9-4359-9f10-bb70248527eb",
    "metadata": {},
    "outputs": [
@@ -144,7 +134,7 @@
        "Name: Avengers: Infinity War - Part I (2018), Length: 7613, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,31 +157,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "a78e8b65-9a76-45f9-93df-70dfea3f926a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: no matches found: model/splits/*\n",
+      "Data written to /media/instantinopaul/data/Code/ML/github.com/Movie-Recommendation-System/model/splits/corr0000.npy.split\n",
+      "Data written to /media/instantinopaul/data/Code/ML/github.com/Movie-Recommendation-System/model/splits/corr0001.npy.split\n",
+      "2 file(s) written.\n"
+     ]
+    }
+   ],
    "source": [
-    "modelnp.save('model/corr.npy', corrdf.to_numpy())"
+    "np.save('model/corr.npy', np.half(corrdf.to_numpy()))\n",
+    "! rm model/splits/*\n",
+    "pysp.split('model/corr.npy', 'model/splits')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "62f4d08a-3446-4af3-a00f-6bf54d069cc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "json.dump(list(corrdf.columns), open('model/columns.json', 'w+'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "947a52a6-85ab-4cd4-8300-b8ff95d04fed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
